changes/5.15-rc1/a36abeaaf00f8bd07af4b530f12b9a64dc15c777
cifsd: fix implicit declaration of function 'groups_alloc'

kernel test robot reported:
    fs/cifsd/smb_common.c: In function 'ksmbd_override_fsids':
>> fs/cifsd/smb_common.c:613:7: error: implicit declaration of function
>> 'groups_alloc'; did you mean 'cgroup_sk_alloc'?
>> [-Werror=implicit-function-declaration]
     613 |  gi = groups_alloc(0);
         |       ^~~~~~~~~~~~
         |       cgroup_sk_alloc
   fs/cifsd/smb_common.c:613:5: warning: assignment to 'struct
group_info *' from 'int' makes pointer from integer without a cast
[-Wint-conversion]
     613 |  gi = groups_alloc(0);
         |     ^
>> fs/cifsd/smb_common.c:618:2: error: implicit declaration of function
>> 'set_groups'; did you mean 'get_cgroup_ns'?
>> [-Werror=implicit-function-declaration]
     618 |  set_groups(cred, gi);
         |  ^~~~~~~~~~
         |  get_cgroup_ns
   cc1: some warnings being treated as errors

This patch add depends on MULTIUSER.

Reported-by: kernel test robot <lkp@intel.com>
Signed-off-by: Namjae Jeon <namjae.jeon@samsung.com>
Signed-off-by: Steve French <stfrench@microsoft.com>

